// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarChart.vue a very basic chart matches the snapshot 1`] = `
<div class="bar-chart w-full flex bg-inherit relative" style="height: 20px;">
  <div class="flex absolute items-center bg-inherit h-full" style="left: 0%;">
    <div class="absolute dataLabelLeft data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">

    </div>
  </div>
  <div class="h-full flex-shrink-0 absolute bg-inherit grow-right" style="width: 50%; left: 0%; display: none;" name="grow">
    <div class="absolute w-full h-full z-10 bg-grey"></div>
    <div class="w-full h-full bg-inherit overflow-hidden relative">
      <div class="arrow rotate-1/8 h-full z-10 bg-inherit absolute" style="width: 20px; top: 50%;"></div>
      <div class="arrow rotate-7/8 h-full z-10 bg-inherit absolute" style="width: 20px; bottom: 50%;"></div>
    </div>
    <!---->
  </div>
  <div class="flex absolute items-center bg-inherit h-full" style="left: 50%;">
    <div class="ml-1 data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">

    </div>
  </div>
</div>
`;

exports[`BarChart.vue insignificant matches the snapshot 1`] = `
<div class="bar-chart w-full flex bg-inherit relative" style="height: 20px;">
  <div class="flex absolute items-center bg-inherit h-full" style="left: 80.11111111111111%;">
    <div class="absolute dataLabelLeft data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      -2.4%
    </div>
  </div>
  <div class="h-full flex-shrink-0 absolute bg-inherit grow-left" style="width: 2.6666666666666665%; left: 80.11111111111111%; display: none;" name="grow">
    <div class="absolute w-full h-full z-10 bg-grey" style="background: transparent;"></div>
    <div class="w-full h-full bg-inherit overflow-hidden relative">
      <div class="arrow rotate-1/8 h-full z-10 bg-inherit absolute" style="width: 20px; top: 50%;"></div>
      <div class="arrow rotate-7/8 h-full z-10 bg-inherit absolute" style="width: 20px; bottom: 50%;"></div>
    </div>
    <div class="grow-delay absolute h-full flex flex-col items-stretch top-0 z-20" style="width: 508.3333333333333%; left: -254.16666666666666%; display: none;" name="grow"><span class="flex-grow"></span> <span class="flex-grow bg-black opacity-25"></span> <span class="flex-grow"></span></div>
  </div>
  <div class="flex absolute items-center bg-inherit h-full" style="left: 82.77777777777779%;">
    <div class="ml-1 data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      ◀ 54.5%
    </div>
  </div>
</div>
`;

exports[`BarChart.vue negative baseline matches the snapshot 1`] = `
<div class="bar-chart w-full flex bg-inherit relative" style="height: 20px;" mode="baseline">
  <div class="flex absolute items-center bg-inherit h-full" style="left: 27.111111111111114%;">
    <div class="absolute dataLabelLeft data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      -14.1%
    </div>
  </div>
  <div class="h-full flex-shrink-0 absolute bg-inherit grow-left" style="width: 15.666666666666664%; left: 27.111111111111114%; display: none;" name="grow">
    <div class="absolute w-full h-full z-10 bg-grey"></div>
    <div class="w-full h-full bg-inherit overflow-hidden relative">
      <div class="arrow rotate-1/8 h-full z-10 bg-inherit absolute" style="width: 20px; top: 50%;"></div>
      <div class="arrow rotate-7/8 h-full z-10 bg-inherit absolute" style="width: 20px; bottom: 50%;"></div>
    </div>
    <div class="grow-delay absolute h-full flex flex-col items-stretch top-0 z-20" style="width: 170.2127659574468%; left: -85.1063829787234%; display: none;" name="grow"><span class="flex-grow"></span> <span class="flex-grow bg-black opacity-25"></span> <span class="flex-grow"></span></div>
  </div>
  <div class="flex absolute items-center bg-inherit h-full" style="left: 42.77777777777778%;">
    <div class="ml-1 data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      ◀ 18.5%
    </div>
  </div>
</div>
`;

exports[`BarChart.vue negative delta matches the snapshot 1`] = `
<div class="bar-chart w-full flex bg-inherit relative" style="height: 20px;">
  <div class="flex absolute items-center bg-inherit h-full" style="left: 27.111111111111114%;">
    <div class="absolute dataLabelLeft data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      -14.1%
    </div>
  </div>
  <div class="h-full flex-shrink-0 absolute bg-inherit grow-left" style="width: 15.666666666666664%; left: 27.111111111111114%; display: none;" name="grow">
    <div class="absolute w-full h-full z-10 bg-grey"></div>
    <div class="w-full h-full bg-inherit overflow-hidden relative">
      <div class="arrow rotate-1/8 h-full z-10 bg-inherit absolute" style="width: 20px; top: 50%;"></div>
      <div class="arrow rotate-7/8 h-full z-10 bg-inherit absolute" style="width: 20px; bottom: 50%;"></div>
    </div>
    <div class="grow-delay absolute h-full flex flex-col items-stretch top-0 z-20" style="width: 170.2127659574468%; left: -85.1063829787234%; display: none;" name="grow"><span class="flex-grow"></span> <span class="flex-grow bg-black opacity-25"></span> <span class="flex-grow"></span></div>
  </div>
  <div class="flex absolute items-center bg-inherit h-full" style="left: 42.77777777777778%;">
    <div class="ml-1 data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      ◀ 18.5%
    </div>
  </div>
</div>
`;

exports[`BarChart.vue positive baseline matches the snapshot 1`] = `
<div class="bar-chart w-full flex bg-inherit relative" style="height: 20px;" mode="baseline">
  <div class="flex absolute items-center bg-inherit h-full" style="left: 64.99999999999999%;">
    <div class="absolute dataLabelLeft data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      38.5% ▶
    </div>
  </div>
  <div class="h-full flex-shrink-0 absolute bg-inherit grow-right" style="width: 49.111111111111114%; left: 64.99999999999999%; display: none;" name="grow">
    <div class="absolute w-full h-full z-10 bg-grey"></div>
    <div class="w-full h-full bg-inherit overflow-hidden relative">
      <div class="arrow rotate-1/8 h-full z-10 bg-inherit absolute" style="width: 20px; top: 50%;"></div>
      <div class="arrow rotate-7/8 h-full z-10 bg-inherit absolute" style="width: 20px; bottom: 50%;"></div>
    </div>
    <div class="grow-delay absolute h-full flex flex-col items-stretch top-0 z-20" style="width: 40.723981900452486%; right: -20.361990950226243%; display: none;" name="grow"><span class="flex-grow"></span> <span class="flex-grow bg-black opacity-25"></span> <span class="flex-grow"></span></div>
  </div>
  <div class="flex absolute items-center bg-inherit h-full" style="left: 114.1111111111111%;">
    <div class="ml-1 data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      +44.2%
    </div>
  </div>
</div>
`;

exports[`BarChart.vue positive delta matches the snapshot 1`] = `
<div class="bar-chart w-full flex bg-inherit relative" style="height: 20px;">
  <div class="flex absolute items-center bg-inherit h-full" style="left: 64.99999999999999%;">
    <div class="absolute dataLabelLeft data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      38.5% ▶
    </div>
  </div>
  <div class="h-full flex-shrink-0 absolute bg-inherit grow-right" style="width: 49.111111111111114%; left: 64.99999999999999%; display: none;" name="grow">
    <div class="absolute w-full h-full z-10 bg-grey"></div>
    <div class="w-full h-full bg-inherit overflow-hidden relative">
      <div class="arrow rotate-1/8 h-full z-10 bg-inherit absolute" style="width: 20px; top: 50%;"></div>
      <div class="arrow rotate-7/8 h-full z-10 bg-inherit absolute" style="width: 20px; bottom: 50%;"></div>
    </div>
    <div class="grow-delay absolute h-full flex flex-col items-stretch top-0 z-20" style="width: 40.723981900452486%; right: -20.361990950226243%; display: none;" name="grow"><span class="flex-grow"></span> <span class="flex-grow bg-black opacity-25"></span> <span class="flex-grow"></span></div>
  </div>
  <div class="flex absolute items-center bg-inherit h-full" style="left: 114.1111111111111%;">
    <div class="ml-1 data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      +44.2%
    </div>
  </div>
</div>
`;

exports[`BarChart.vue using a unusual scale matches the snapshot 1`] = `
<div class="bar-chart w-full flex bg-inherit relative" style="height: 20px;" mode="baseline">
  <div class="flex absolute items-center bg-inherit h-full" style="left: 80.11111111111111%;">
    <div class="absolute dataLabelLeft data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      -2.4%
    </div>
  </div>
  <div class="h-full flex-shrink-0 absolute bg-inherit grow-left" style="width: 2.6666666666666665%; left: 80.11111111111111%; display: none;" name="grow">
    <div class="absolute w-full h-full z-10 bg-grey"></div>
    <div class="w-full h-full bg-inherit overflow-hidden relative">
      <div class="arrow rotate-1/8 h-full z-10 bg-inherit absolute" style="width: 20px; top: 50%;"></div>
      <div class="arrow rotate-7/8 h-full z-10 bg-inherit absolute" style="width: 20px; bottom: 50%;"></div>
    </div>
    <div class="grow-delay absolute h-full flex flex-col items-stretch top-0 z-20" style="width: 508.3333333333333%; left: -254.16666666666666%; display: none;" name="grow"><span class="flex-grow"></span> <span class="flex-grow bg-black opacity-25"></span> <span class="flex-grow"></span></div>
  </div>
  <div class="flex absolute items-center bg-inherit h-full" style="left: 82.77777777777779%;">
    <div class="ml-1 data-label whitespace-no-wrap text-xs font-semibold bg-inherit z-30 px-px opacity-0">
      ◀ 54.5%
    </div>
  </div>
</div>
`;
